recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:8: error: not found: value lenght
    recule(lenght)
           ^Tree:11: error: not enough arguments for method tree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameter shrink.
    tree(steps length, angle, shrink -1)
        ^